# agentic_framework_new

./: .gitignore  main.py  pyproject.toml  requirements.txt  streamlit_app.py
api/: agent_ui.py  routes.py
config/: .env.example
core/: agent_folder.py  agent_manager.py  executor.py  models.py
defined_agents/: coding-agent.json  content-writer.json  data-analyst.json  devops-agent.json  hr-agent.json  loader.py  marketing-agent.json
frontend/: .env.local.example  README.md  eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: MultiChoice.tsx  Shell.tsx
frontend/app/lib/: api.ts  icons.ts
mcp/: host.py  registry.json
plugins/: plugin_executor.py  plugin_registry.py  plugin_schema.py
plugins/community/: hi-anirudh.plugin.json  linear.plugin.json  notion.plugin.json  serper-search.plugin.json  tavily-search.plugin.json  text-summariser.plugin.json
plugins/community/skills/: hi_anirudh.py
plugins/user/: TEMPLATE.plugin.json.example  my-mcp-plugin.plugin.json  my-skill.plugin.json  usko-tagger.plugin.json
plugins/user/skills/: my_skill.py  usko_tagger.py  usko_tagger.skill.md
prompts/: system_prompt.py
tests/: test_base_layer.py
