[project]
name = "agent-fw"
version = "1.0.0"
description = "Agentic framework — Constant System base layer"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-mistralai>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "mcp", "prompts", "api"]

[tool.pytest.ini_options]
asyncio_mode     = "auto"
testpaths        = ["tests"]
python_files     = ["test_*.py"]
python_classes   = ["Test*"]
python_functions = ["test_*"]
log_cli          = true
log_cli_level    = "WARNING"

[tool.ruff]
line-length    = 100
target-version = "py312"
